WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126903
[MSE][Mac] Crash when reloading a page during playback
https://bugs.webkit.org/show_bug.cgi?id=126903
Summary
[MSE][Mac] Crash when reloading a page during playback
Jer Noble
Reported
2014-01-13 08:13:56 PST
[MSE][Mac] Crash when reloading a page during playback
Attachments
Patch
(4.17 KB, patch)
2014-01-13 08:23 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-01-13 08:23:57 PST
Created
attachment 221044
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-23 20:54:51 PST
Comment on
attachment 221044
[details]
Patch Clearing flags on attachment: 221044 Committed
r162685
: <
http://trac.webkit.org/changeset/162685
>
WebKit Commit Bot
Comment 3
2014-01-23 20:54:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug